--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "server": "ng build && nodemon server.js",
+    "init": "npm install && ng build && node server.js"
   },
   "private": true,
   "dependencies": {
@@ -21,7 +23,16 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "body-parser": "^1.18.2",
+    "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "debug-logger": "^0.4.1",
+    "express": "^4.16.2",
+    "jquery": "^3.3.1",
+    "log4js": "^2.5.2",
+    "nodemon": "^1.14.12",
+    "popper": "^1.0.1",
+    "popper.js": "^1.12.9",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
