--- a/package.json
+++ b/package.json
@@ -23,14 +23,20 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@fortawesome/fontawesome": "^1.1.3",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "crypto": "^1.0.1",
     "debug-logger": "^0.4.1",
     "express": "^4.16.2",
     "jquery": "^3.3.1",
+    "jsonwebtoken": "^8.1.1",
     "log4js": "^2.5.2",
+    "mongoose": "^5.0.4",
     "nodemon": "^1.14.12",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "popper": "^1.0.1",
     "popper.js": "^1.12.9",
     "rxjs": "^5.5.6",
