--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "fisc-janitor",
   "version": "0.0.0",
   "license": "MIT",
+  "engines": {
+    "node": "7.4.0",
+    "npm": "4.0.5"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -23,16 +27,19 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
-    "@fortawesome/fontawesome": "^1.1.3",
+    "aws-sdk": "^2.192.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "crypto": "^1.0.1",
+    "d3": "^3.5.17",
     "debug-logger": "^0.4.1",
     "express": "^4.16.2",
+    "express-jwt": "^5.3.0",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.1.1",
     "log4js": "^2.5.2",
+    "moment": "^2.20.1",
     "mongoose": "^5.0.4",
     "nodemon": "^1.14.12",
     "passport": "^0.4.0",
