Add AWS Service MongoDB tables

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# env
+.env
+
 # compiled output
 /dist
 /dist-server
@@ -19,6 +22,7 @@
 *.sublime-workspace
 
 # IDE - VSCode
+/.vscode
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
