--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "async": "^2.6.0",
     "aws-sdk": "^2.192.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
@@ -34,6 +35,7 @@
     "crypto": "^1.0.1",
     "d3": "^3.5.17",
     "debug-logger": "^0.4.1",
+    "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "express-jwt": "^5.3.0",
     "jquery": "^3.3.1",
