--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve && node server.js",
+    "start": "ng build && node server.js",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
