--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "crypto": "^1.0.1",
     "d3": "^3.5.17",
     "debug-logger": "^0.4.1",
+    "docker-run": "^3.1.0",
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "express-jwt": "^5.3.0",
@@ -52,6 +53,7 @@
     "popper": "^1.0.1",
     "popper.js": "^1.12.9",
     "rxjs": "^5.5.6",
+    "tape": "^4.8.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
