--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fisc-janitor",
+  "name": "clean-cloud",
   "version": "0.0.0",
   "license": "MIT",
   "engines": {
@@ -8,15 +8,16 @@
   },
   "scripts": {
     "ng": "ng",
-    "start": "ng build && node server.js",
+    "start": "ng build --prod && node server.js",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "server": "ng build && nodemon server.js",
     "init": "npm install && ng build && node server.js",
-    "angular": "ng serve --proxy-config proxy.json",
-    "node": "nodemon server-dev.js"
+    "dev": "ng serve --proxy-config proxy.json | nodemon server-dev.js",
+    "mock": "ng serve --proxy-config proxy.json | nodemon server-mock.js"
+
   },
   "private": true,
   "dependencies": {
@@ -29,10 +30,10 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "angular2-moment": "^1.8.0",
     "async": "^2.6.0",
     "aws-sdk": "^2.192.0",
     "body-parser": "^1.18.2",
-    "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "crypto": "^1.0.1",
     "d3": "^3.5.17",
@@ -42,10 +43,12 @@
     "express": "^4.16.2",
     "express-jwt": "^5.3.0",
     "http": "0.0.0",
+    "imap": "^0.8.19",
+    "jenkins": "^0.20.1",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.1.1",
     "log4js": "^2.5.2",
-    "moment": "^2.20.1",
+    "moment": "^2.21.0",
     "mongoose": "^5.0.4",
     "nodemon": "^1.14.12",
     "passport": "^0.4.0",
@@ -53,6 +56,7 @@
     "popper": "^1.0.1",
     "popper.js": "^1.12.9",
     "rxjs": "^5.5.6",
+    "socket.io": "^2.0.4",
     "tape": "^4.8.0",
     "zone.js": "^0.8.19"
   },
@@ -64,6 +68,10 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
+    "eslint": "^4.18.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-google": "^0.9.1",
+    "eslint-plugin-import": "^2.9.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
