--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
   },
   "scripts": {
     "ng": "ng",
-    "start": "ng build --prod && node server.js",
+    "start": "ng build && node server.js",
     "build": "ng build --prod",
     "test": "ng test",
+    "node-test": "nyc mocha src/api/test/*.js",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "server": "ng build && nodemon server.js",
     "init": "npm install && ng build && node server.js",
     "dev": "ng serve --proxy-config proxy.json | nodemon server-dev.js",
     "mock": "ng serve --proxy-config proxy.json | nodemon server-mock.js"
-
   },
   "private": true,
   "dependencies": {
@@ -34,6 +34,8 @@
     "async": "^2.6.0",
     "aws-sdk": "^2.192.0",
     "body-parser": "^1.18.2",
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
     "core-js": "^2.4.1",
     "crypto": "^1.0.1",
     "d3": "^3.5.17",
@@ -44,13 +46,16 @@
     "express-jwt": "^5.3.0",
     "http": "0.0.0",
     "imap": "^0.8.19",
+    "istanbul": "^0.4.5",
     "jenkins": "^0.20.1",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.1.1",
     "log4js": "^2.5.2",
+    "mocha": "^5.0.4",
     "moment": "^2.21.0",
     "mongoose": "^5.0.4",
     "nodemon": "^1.14.12",
+    "nyc": "^11.4.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "popper": "^1.0.1",
