--- a/package.json
+++ b/package.json
@@ -7,26 +7,24 @@
     "npm": "4.0.5"
   },
   "scripts": {
-    "ng": "ng",
     "start": "ng build && node server.js",
-    "build": "ng build --prod",
-    "test": "ng test",
+    "test": "ng test --code-coverage",
     "node-test": "nyc mocha src/api/test/*.js",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "server": "ng build && nodemon server.js",
-    "init": "npm install && ng build && node server.js",
     "dev": "ng serve --proxy-config proxy.json | nodemon server-dev.js",
     "mock": "ng serve --proxy-config proxy.json | nodemon server-mock.js"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.0",
+    "@angular/cdk": "^5.2.4",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
+    "@angular/material": "^5.2.4",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
@@ -34,6 +32,7 @@
     "async": "^2.6.0",
     "aws-sdk": "^2.192.0",
     "body-parser": "^1.18.2",
+    "bootstrap": "^4.0.0",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "core-js": "^2.4.1",
@@ -44,6 +43,7 @@
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "express-jwt": "^5.3.0",
+    "html-to-text": "*",
     "http": "0.0.0",
     "imap": "^0.8.19",
     "istanbul": "^0.4.5",
@@ -51,9 +51,12 @@
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.1.1",
     "log4js": "^2.5.2",
+    "mail-listener2": "^0.3.1",
     "mocha": "^5.0.4",
     "moment": "^2.21.0",
     "mongoose": "^5.0.4",
+    "node-schedule": "^1.3.0",
+    "nodemailer": "^4.6.2",
     "nodemon": "^1.14.12",
     "nyc": "^11.4.1",
     "passport": "^0.4.0",
