--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "popper.js": "^1.12.9",
     "rxjs": "^5.5.6",
     "socket.io": "^2.0.4",
+    "socket.io-client": "^2.0.4",
     "tape": "^4.8.0",
     "zone.js": "^0.8.19"
   },
