--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "angular2-moment": "^1.8.0",
     "async": "^2.6.0",
     "aws-sdk": "^2.192.0",
+    "aws-sdk-mock": "^1.7.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
     "chai": "^4.1.2",
@@ -55,6 +56,7 @@
     "mocha": "^5.0.4",
     "moment": "^2.21.0",
     "mongoose": "^5.0.4",
+    "node-mocks-http": "^1.5.8",
     "node-schedule": "^1.3.0",
     "nodemailer": "^4.6.2",
     "nodemon": "^1.14.12",
@@ -64,6 +66,7 @@
     "popper": "^1.0.1",
     "popper.js": "^1.12.9",
     "rxjs": "^5.5.6",
+    "should": "^13.2.1",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
     "tape": "^4.8.0",
