--- a/package.json
+++ b/package.json
@@ -8,12 +8,9 @@
   },
   "scripts": {
     "start": "ng build && node server.js",
-    "test": "ng test --code-coverage",
-    "node-test": "nyc mocha src/api/test/*.js",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "dev": "ng serve --proxy-config proxy.json | nodemon server-dev.js",
-    "mock": "ng serve --proxy-config proxy.json | nodemon server-mock.js"
+    "karma": "ng test --code-coverage",
+    "mocha": "nyc mocha src/api/test/*.js",
+    "dev": "ng serve --proxy-config proxy.json | nodemon server.js"
   },
   "private": true,
   "dependencies": {
@@ -67,6 +64,7 @@
     "popper.js": "^1.12.9",
     "rxjs": "^5.5.6",
     "should": "^13.2.1",
+    "sinon": "^4.5.0",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
     "tape": "^4.8.0",
