--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "html-to-text": "*",
     "http": "0.0.0",
     "imap": "^0.8.19",
+    "ink-docstrap": "^1.3.2",
     "istanbul": "^0.4.5",
     "jenkins": "^0.20.1",
     "jquery": "^3.3.1",
