--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "clean-cloud",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "license": "MIT",
   "engines": {
     "node": "9.3.0",
-    "npm": "5.6.0"
+    "npm": "6.0.0"
   },
   "scripts": {
     "start": "ng build --prod && node server.js",
@@ -58,6 +58,7 @@
     "node-schedule": "^1.3.0",
     "nodemailer": "^4.6.2",
     "nodemon": "^1.14.12",
+    "npm": "^6.0.0",
     "nyc": "^11.4.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
