--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "async": "^2.6.0",
     "aws-sdk": "^2.192.0",
     "aws-sdk-mock": "^1.7.0",
+    "basic-auth": "^2.0.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
     "chai": "^4.1.2",
@@ -49,6 +50,8 @@
     "jenkins": "^0.20.1",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.1.1",
+    "jwt-simple": "^0.5.1",
+    "ldapauth-fork": "^4.0.2",
     "log4js": "^2.5.2",
     "mail-listener2": "^0.3.1",
     "mocha": "^5.0.4",
@@ -61,6 +64,7 @@
     "npm": "^6.0.0",
     "nyc": "^11.4.1",
     "passport": "^0.4.0",
+    "passport-ldapauth": "^2.0.0",
     "passport-local": "^1.0.0",
     "popper": "^1.0.1",
     "popper.js": "^1.12.9",
